--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio website</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>this is hello</h1>
+   <section class="top-banner">
+    <div class="container">
+     <div class="d-flex">
+      <h1>welcome To</h1>
+      <h1><span class="text-color">Peter Parker </span>World!</h1>
+      <h4>Build Climber and Train Stopper</h4>
+      <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+   </p>
+       <a class="btn-hero" target="_blank" href="https://www.linkedin.com/in/md-shipon-214207214/">HERE ME</a>
+    </div>
+    <div class="d-flex">
+      <img src="/images/jhankar.png" alt="" srcset="" />
+    </div>
+      </div>
+   </section>
   </body>
 </html>
