--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   </head>
   <body>
    <section class="top-banner">
-    <div class="container">
      <div class="d-flex">
       <h1>welcome To</h1>
       <h1><span class="text-color">Peter Parker </span>World!</h1>
@@ -27,7 +26,19 @@
     <div class="d-flex">
       <img src="/images/jhankar.png" alt="" srcset="" />
     </div>
-      </div>
    </section>
+
+   <section class="dream-Big">
+            <div class="d-flex">
+            <img src="/images/jhankar2.png" alt="" srcset="">
+        </div>
+        <div class="d-flex">
+            <h1>Dream Big</h1>
+            <h4>Become a web developer</h4>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="btn-hero" href="http://" target="_blank" rel="noopener noreferrer">Download Resume</a>
+        </div>
+  </section>
+
   </body>
 </html>
