--- a/index.html
+++ b/index.html
@@ -14,31 +14,80 @@
     />
   </head>
   <body>
-   <section class="top-banner">
-     <div class="d-flex">
-      <h1>welcome To</h1>
-      <h1><span class="text-color">Peter Parker </span>World!</h1>
-      <h4>Build Climber and Train Stopper</h4>
-      <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
-   </p>
-       <a class="btn-hero" target="_blank" href="https://www.linkedin.com/in/md-shipon-214207214/">HERE ME</a>
-    </div>
-    <div class="d-flex">
-      <img src="/images/jhankar.png" alt="" srcset="" />
-    </div>
-   </section>
+    <section class="top-banner flex-container">
+      <div class="d-flex">
+        <h1>welcome To</h1>
+        <h1><span class="text-color">Peter Parker </span>World!</h1>
+        <h4>Build Climber and Train Stopper</h4>
+        <p>
+          You might saw me jumping, climbing buildings, and stopping trains. But
+          nobody pays me a dime for that work. That's why I am learning and
+          mastering web development. I will not stop until I become the Web
+          Development Hero.
+        </p>
+        <a
+          class="btn-hero"
+          target="_blank"
+          href="https://www.linkedin.com/in/md-shipon-214207214/"
+          >HERE ME</a
+        >
+      </div>
+      <div class="d-flex">
+        <img src="/images/jhankar.png" alt="" srcset="" />
+      </div>
+    </section>
 
-   <section class="dream-Big">
-            <div class="d-flex">
-            <img src="/images/jhankar2.png" alt="" srcset="">
-        </div>
-        <div class="d-flex">
-            <h1>Dream Big</h1>
-            <h4>Become a web developer</h4>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="btn-hero" href="http://" target="_blank" rel="noopener noreferrer">Download Resume</a>
-        </div>
-  </section>
+    <section class="dream-Big flex-container">
+      <div class="d-flex">
+        <img src="/images/jhankar2.png" alt="" srcset="" />
+      </div>
+      <div class="d-flex">
+        <h1>Dream Big</h1>
+        <h4>Become a web developer</h4>
+        <p>
+          I already learned the basic HTML and CSS. I can build any simple
+          website. I can even teach my grandma how to make simple website. My
+          goal is to build 3 websites and learn advanced topics.
+        </p>
+        <a
+          class="btn-hero"
+          href="http://"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Download Resume</a
+        >
+      </div>
+    </section>
 
+    <section class="Experiences-container">
+      <h1>Experiences</h1>
+      <div class="main-container flex-container">
+        <div id="full-stack-experiences"class="experiences-area">
+          <h2>Full Stack Web Developer</h2>
+          <h4 class="text-color">2021-Present | Pro Level Developer</h4>
+          <p>
+            I am the master of HTML, CSS and Javascript. I know everything
+            needed to make a website function, efficient. I didn't stop with the
+            web. I went beyond with most popular Javascript framework called Vue
+            JS. I even know the deployment, server and security. I will give you
+            100% web solution.
+          </p>
+        </div>
+        <div id="web-dev-experiences" class="experiences-area">
+          <h2>Baby Web Developer</h2>
+          <h4 class="text-color">2020-2021 | Programming Hero Learner</h4>
+          <p>
+            They didn't offer me a job. But I made myself as a remove web
+            developer. I made their website and showed it to them. They liked
+            it. And uploaded the content. It was fun working at Programming
+            Hero.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p style="text-align: center">&copy;nxshipon@gmail.com</p>
+    </footer>
   </body>
 </html>
