--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         >
       </div>
       <div class="d-flex">
-        <img src="/images/jhankar.png" alt="" srcset="" />
+        <img src="img/jhankar.png" alt="" srcset="" />
       </div>
     </section>
 
     <section class="dream-Big flex-container">
       <div class="d-flex">
-        <img src="/images/jhankar2.png" alt="" srcset="" />
+        <img src="/img/jhankar2.png" alt="" srcset="" />
       </div>
       <div class="d-flex">
         <h1>Dream Big</h1>
@@ -62,7 +62,7 @@
     <section class="Experiences-container">
       <h1>Experiences</h1>
       <div class="main-container flex-container">
-        <div id="full-stack-experiences"class="experiences-area">
+        <div id="full-stack-experiences" class="experiences-area">
           <h2>Full Stack Web Developer</h2>
           <h4 class="text-color">2021-Present | Pro Level Developer</h4>
           <p>
